[gd_scene load_steps=15 format=3 uid="uid://b7ym7kj6lmfkd"]

[ext_resource type="Script" path="res://src/Level/level.gd" id="1_6yqe5"]
[ext_resource type="Script" path="res://src/Level/PlayerCamera.gd" id="2_l25bb"]
[ext_resource type="Shader" path="res://src/Level/LitView.gdshader" id="2_uk585"]
[ext_resource type="PackedScene" uid="uid://du745qvyq4g2m" path="res://src/Level/lit_level.tscn" id="4_3gto1"]
[ext_resource type="PackedScene" uid="uid://br6tg1skeqkm2" path="res://src/VisibilityMask/tile_map_vis_mask.tscn" id="5_i53mb"]
[ext_resource type="PackedScene" uid="uid://dkndvy4y4gs8t" path="res://src/Level/dark_level.tscn" id="6_i7ocf"]
[ext_resource type="AudioStream" uid="uid://bquyi5aw4ibot" path="res://sound/yewbic-ambiences/31904__yewbic__ambience01.wav" id="7_w7alf"]

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_614um"]
light_mode = 1

[sub_resource type="ViewportTexture" id="ViewportTexture_t32ua"]
viewport_path = NodePath("VisibilityViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_01e72"]
viewport_path = NodePath("LitViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_mclae"]
viewport_path = NodePath("VisibilityViewport")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_wvyg5"]
resource_local_to_scene = true
shader = ExtResource("2_uk585")
shader_parameter/true_sight = false
shader_parameter/mask_texture = SubResource("ViewportTexture_mclae")

[sub_resource type="ViewportTexture" id="ViewportTexture_2pjf6"]
viewport_path = NodePath("LitViewport")

[sub_resource type="ViewportTexture" id="ViewportTexture_klc3w"]
viewport_path = NodePath("DarkLevelViewport")

[node name="Level" type="Node2D"]
script = ExtResource("1_6yqe5")

[node name="PlayerCamera" type="Camera2D" parent="."]
texture_filter = 1
position = Vector2(576, 326)
script = ExtResource("2_l25bb")

[node name="ColorRect" type="ColorRect" parent="PlayerCamera"]
visible = false
z_index = -2048
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -682.0
offset_top = -392.0
offset_right = 681.0
offset_bottom = 392.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="VisDebug" type="Sprite2D" parent="PlayerCamera"]
visible = false
z_index = 7
material = SubResource("CanvasItemMaterial_614um")
position = Vector2(-471.253, -258.642)
scale = Vector2(0.152338, 0.152338)
texture = SubResource("ViewportTexture_t32ua")

[node name="LitDebug" type="Sprite2D" parent="PlayerCamera"]
visible = false
z_index = 7
material = SubResource("CanvasItemMaterial_614um")
position = Vector2(-470.253, -153.642)
scale = Vector2(0.152338, 0.152338)
texture = SubResource("ViewportTexture_01e72")

[node name="LitView" type="Sprite2D" parent="."]
z_index = 1
texture_filter = 1
material = SubResource("ShaderMaterial_wvyg5")
texture = SubResource("ViewportTexture_2pjf6")
centered = false

[node name="DarkView" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("ViewportTexture_klc3w")
centered = false

[node name="LitViewport" type="SubViewport" parent="."]
transparent_bg = true
handle_input_locally = false
audio_listener_enable_2d = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="LitLevel" parent="LitViewport" instance=ExtResource("4_3gto1")]

[node name="VisibilityViewport" type="SubViewport" parent="."]
transparent_bg = true
size = Vector2i(1152, 648)
render_target_update_mode = 4

[node name="TileMap_VisMask" parent="VisibilityViewport" instance=ExtResource("5_i53mb")]

[node name="DarkLevelViewport" type="SubViewport" parent="."]
size = Vector2i(1152, 648)

[node name="DarkLevel" parent="DarkLevelViewport" instance=ExtResource("6_i7ocf")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_w7alf")
volume_db = -15.0
autoplay = true
